--- a/app/src/styles/card.css
+++ b/app/src/styles/card.css
@@ -38,7 +38,7 @@
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
+    background-color: rgb(0, 0, 0);
     color: white;
     transform: rotateY(180deg);
   }
